Owner show page now displays owner vehicles and tickets

--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -2,9 +2,9 @@
   <p>There are no owners available.</p>
 <% else %>
   <% @owners.each do |owner| %>
-    <h3><%= "#{owner.prefix} #{owner.first_name} #{owner.middle_name} #{owner.last_name}" %></h3>
-    <%# <p>
-      Learn more about <%= link_to "house #{house.name}", house %>
-    <%# </p> %>
+    <!--<h3><%= "#{owner.prefix} #{owner.first_name} #{owner.middle_name} #{owner.last_name}" %></h3>-->
+    <p>
+      <%= link_to "#{owner.prefix} #{owner.first_name} #{owner.middle_name} #{owner.last_name}", owner %>.
+    </p>
   <% end %>
 <% end %>
