--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+  <header>
+    <h1 class="title"><%= link_to 'Vehicle Inventory', root_path %></h1>
+    <h2 class="subtitle">View owner, vehicle, and parking ticket data <strong>with ease.</strong>.</h2>
+    <p>
+      <%= link_to "Home", root_path %> |
+      <%= link_to "Vehicles", "" %> |
+      <%= link_to "Parking Tickets", "" %> |
+      <%= link_to "About", "" %> |
+    </p>
+  </header>
     <%= yield %>
   </body>
 </html>
