--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#show</h1>
-<p>Find me in app/views/pages/show.html.erb</p>
+<p>
+  <strong>Title:</strong>
+  <%= @page.title %>
+</p>
+
+<p>
+  <strong>Content:</strong>
+  <%= @page.content %>
+</p>
+
+<p>
+  <strong>Permalink:</strong>
+  <%= @page.permalink %>
+</p>
